enable intel charts

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:oypmus/uZOOUryRHl47VCixlvkKbH8wGw7RluiNnhOYm2aqrFX+RR6yUIIuG8bz0paoc78+SEbHmP7ZGTxa6S6I=,iv:8OhnCA1QNiKFiDWZWLBBToAX/hip0BAy0PxJdp/6TwI=,tag:EfiUrVxEsrczJbtCASDHPA==,type:comment]
-#ENC[AES256_GCM,data:lZ9X+jJJzhbiegmH001KeonNywLrDQ/9mcGnD7HHayWb7IWTtEXiUuNYssA=,iv:Ume1kWNZNU1q5mjKiufxK18yKqOckykfSQs35lkkkNk=,tag:ZmgyELn1J7Kh2BR8xD6JzQ==,type:comment]
-VIP: ENC[AES256_GCM,data:gq8Xh5MXMOi4B3cEZA==,iv:/bj9kR5MXPOP4zO1dZhupn5R4J+9Tp2MG43sBdm2M2M=,tag:fBe/RgTHuG6YpHFJV2fp4A==,type:str]
-#ENC[AES256_GCM,data:jMvUAUO147V/KdkDtF6vkpTyXCw2BsDf6xfh,iv:7NpBeW+BmbPwltj3j30A1In9A0Full7xG7ZM8oU01Bo=,tag:XFnseZf27fpvbTH0PD+9Wg==,type:comment]
-#ENC[AES256_GCM,data:koFCv/89vVxV87TZTi7nORXgIIzJTapEBg+FsGF9Buzr63xvj4Ebq5nLAqAgivunGLcnHhlaXVZTgx7RtmPL4PwMcfoNBV4BqACnkx4qHFzTv2wao5xZYgM=,iv:VB9UXyR6l95A4jhwehnmSxknkbh4Ht+g/36xh0C86Yk=,tag:/vHH0bM6STwdmFmDJBTUMg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:/kzKj5JXiEbacgN7His=,iv:Od4S2BLO2KzCjQC70MkboT/76o6mRRXM79XFZHzOTqE=,tag:BP8IHnql7auY9T6lCBXuJw==,type:str]
-#ENC[AES256_GCM,data:tLVZ0nEActuYiySp6htTx9W9yU6ecjHIzJQ4gZAUS7S/ZA==,iv:xgwcUntc4kiZhDAv+TtIIOZ6rQ61LTD9zoarmKIlPxU=,tag:nIsLsP9hTgnjUe0LfGXa+A==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:Q3F48gg96QjrIwLceA==,iv:qtYWD2ut7CAKXirqcVAoDXQph68sCThx39Xht7m3MxI=,tag:FSXMiFE6H55xXg7BnL7eeQ==,type:str]
-#ENC[AES256_GCM,data:DOdgkMvC2Q7Wgp7EcBSZLP1XDQgb1AcoLF3x1BPuP2/nFWS6J7ZPe57mF35HkJg=,iv:NH4x7IhhI0vgLpPPT9L6bLqVAiqC70Mx/Ajith9W4+0=,tag:utyD5zov1nrYR8iO/A9UAQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:M9WXZMmE0v224issaI1l77c8sp4FAU4mdvZOXUBCJg==,iv:vV8wtGCJRRCyH1Q7U67Z3grRg/yxDiDcC8mBWUEHBGk=,tag:bkviinn6AcW+qPTiwUInQg==,type:str]
-#ENC[AES256_GCM,data:jdoE+EoFBVn8vv/8AfP59UmbutEAZ9Y9OpKl71dhkLvxwDn0DtEl5tw6Xn/sZnge9R9jEAOrvx+1zY7vioY44yPur5dTfYNi5QmwXfcI3YNVnA==,iv:BOUFrr2Xcr+NOMApmhAqpf0PEpqRU3rKo8xpuJlDGG0=,tag:PIVvLeYduEzqi0L8Nd7mHw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:21D4+om1gw48L3z2nfTx,iv:9+gvfv5N3sWwmU8UdO9JaTP935AohKzEgm7Z9JVeP+I=,tag:gBrdHU47dFYd+kqRUpkk6Q==,type:str]
-#ENC[AES256_GCM,data:RnMK3vyH4EwSApSBAgW2wJNol1C/2L8eS0D8UkcqL5m5,iv:Dv7GW2xpC0CJSQ+nl04puZbcR6AdQuT7I/xz3L61wpE=,tag:U9m9QI+hV4mgCnU2uEOVbg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:K6YgvNfYJz2zxDAhudaq,iv:aTGmK7vuyBzwnDNtD4cKTg3wvS2uMpQl5evVWYA9Wco=,tag:6NREfqOj7v7Mi42Vsk7diw==,type:str]
-#ENC[AES256_GCM,data:DW0KLRX3SQhgrqxSoC7IVo4F1tEfOIkTwRksLgsBpf43+sVT7jFYOn3ockJkJsqbEnf3St9gk3UK3ML56HQ+Tyazh6kx5ERQO4iSVITKb7o=,iv:28YIgREfuoX9uyOACTL2CsnZu9gi+vozCP9HeC/YCK4=,tag:mW/ACMXpLVevH/bRGwCD1A==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:83YWhgLcTXdFWm5mT4nq,iv:KupNxPfXMW1wtpgdnBIRC5OB2fOMTlL6FIVUfO0wGA0=,tag:MBbmo3cuYwGPlruSNYOh7w==,type:str]
-#ENC[AES256_GCM,data:yZrlOS3OJRAas1R75jxuwaGS3bAAgGlB1qj9GdIYuliILMehMycdZcCYbFNAWTt1gTrqI1SkWqAlfrYYximbU9Tyd4NYjeqM/NNVC7dQcEKtMwyTAl9/,iv:nmgUtWTBCYR5WS37N8ZeJg4v0vLCH7ezKavYZ8R0aTY=,tag:ek8pz7YiPM/tz/7yqSTIAA==,type:comment]
-#ENC[AES256_GCM,data:GpFJ8p+5twbgvo0IB7S40uq1JMTEKIK2GZPpupXu6LCZ06ncCU7WgF2NFjt9NzHrFi/2Wyn/K9oVm3AxvLH7TcEWdu9wRGVYnaBnzkK4PDWLZrkJZwMpa6sYUSy4cmBGDX2liZWjH3UweYBMlGgm6tXpSgEf9d10xNQwnw==,iv:4cWSe0uHKrBmXbDI6NbLmQLkDlojI17xBocUM+qs8jo=,tag:4/f8zOrWr54E1l6AJfr9XA==,type:comment]
-#ENC[AES256_GCM,data:XoJDJDkkH6QSSssMn8rGkBuTOJwtNLpJjThLR+98DX6cA7BqxWVA/TaGqmewG3mKWE55y59mh32kq0V8pcdsTGl81/UQDa8j+hcsOTf5UAQ=,iv:uwtzhjtLnOfPbK0F5nBSWG71RhY0V3rkOMZt9RpqZbA=,tag:g8+f+g23PaD4gOJqi0mqaA==,type:comment]
-#ENC[AES256_GCM,data:gqmwNOaXoK1BmjQUuiWbNkBhO5plqnKCsjLiHdL4XnyELprLwN78b0ZB1irYXjIDir9HUwGc,iv:7B/UN8vLoe+oAcjnAfSnLiD4z4FqrMAPBG8EKvIRazs=,tag:fGquCtC+u/NRxQqoaGcCew==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:LenCD3ksYSFOY2u4,iv:kpDcOX3zb33oTPCQjrY6Rm5Fvw06X/KGwBTrwvMq/rU=,tag:ZFUFusIep/mYPR8pcdYuLA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:TIM8oRCcn+ZhJ3LzqVmtHd4=,iv:kiF6ozIMHhAnr3tF6IrwVLRcbt8P4qSNaaaJxCs83G8=,tag:Ythy60hn7p12Tq5VOr+gRg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:QJ9SRiVL5fWFnZKzM81c6bcGrPVMiY9WSXoyfQdJOMk=,iv:JdtyLiYuCX9YMErvq42uZTEhiCq/rZolkP/yK1maqx0=,tag:KMR3vttU8Yc7Yf3Wnnalqw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ZlBy+lduIglBLpB9oiTadwThso+VDTeAjaoQ+nqcXtKOszxoeeUUYg==,iv:vMSjW2h8q4g1hRVTsltAKpRu7OyS9ge7lqwKcYnauIM=,tag:WhSnQ7U3WNbiPkdigIkPaA==,type:str]
-#ENC[AES256_GCM,data:hTnTJHpKAVYYc5FfCy23qtvExCh0IhB3Zm0D/9CB7w2rnmrpQBI9ChDsul1QUf9ZZfcDK2MEuZ5XRQN8kw2jaA==,iv:JTZcn9SddASgxGreObgKJstw2oJdRRxJIoUCuWiiKwU=,tag:iQCtWH157Ll8OkitCe5gsA==,type:comment]
-#ENC[AES256_GCM,data:gBhgPefanxdlwkh9H61QSyVpYG2GTM6ZtxtP39e7KLSx6ZAb4pXj2xTJ5rTPJ9+ShjoDg39FVI4=,iv:2iFqYzje4seYLYh8bJsL3GuiOj+u/Vp07qvXDbgtzUY=,tag:abEfYZsqb9g6YT+qvRDWDA==,type:comment]
-#ENC[AES256_GCM,data:LeqwRqIQcj2cN55rlRR/Rw6vaEdFCDS0Zw==,iv:nsVvqajdRkrOjyziw5YOHJDfTZLdUIhdf3oSF9jMW9o=,tag:V0HEInJJZr479Jh/gBYFew==,type:comment]
-#ENC[AES256_GCM,data:bfUsywmtkyZZZ0lO0CLMagzK/eRbg8WMXmhpkeZKCpLKYwdOK9bze+qjG2T961efRKYuuIHQb7+jL3JmmoQvLdh3GGbTS0TLUYAumpE=,iv:Wm3I05aMGzwKq4PaUjvaaYTfAy4vDSeNvHCnCDSM01A=,tag:slOlLorueHx/mjJkCyj4RQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:TxlxQ/sAbfRXnoZ05Dk7w5m+19eiiG4Owats8FxZ5pogKOSHQCc285iXPQk6ilSz,iv:1j9baPdHVwuXvnsWyyClPeonNSGv+H7uniiN+sUMKH0=,tag:Ow3K/ZrYo+zKlS91Moa4Cg==,type:str]
-#ENC[AES256_GCM,data:Bksft7qe8biA+asoCTnJvkTwZLe0Q67FHEYBpa2HxRXSPup8BDobf2yARLTPU/GPum7QJT+efpc561x25mWRTQB5NwWkR8A=,iv:xcJk4BPWn/GzLdT/+MuhHsegCMmQlm/la4jfOuQF1I4=,tag:Z6HvnR+HJfmfppAcXGjfhQ==,type:comment]
-#ENC[AES256_GCM,data:6dArOU5SKIZKBMFvXS9PeEUeAGomG/xy/4QTzIJio7bNtRw5+3A0PrirrzZy60b4lzbGc/rl,iv:zQqKzexrhcASxmZPGc5s9lzPVadronfIhm4Onw2waQ4=,tag:y/UFC7e6cxFL/vOKmki60w==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:nPK9uffRYg==,iv:GDXJH9IFB0MXlEbe9B/97Rj8VxDQSZpZp3MYHauQUUQ=,tag:OPA2kg9HxhEkv7xQDzT3PQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:j/OnxKNxmAqyP0iGWU8beFHM7VU=,iv:vBmRYa2znB3OKGnnk5IIUG3QZ1XIkCvzb0NjJRUE0k8=,tag:DpsDvYUR+PXMFjkGs8OiFQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:OEJejg66Mm1LPZ4=,iv:wP4ogMNPOjIjZs8CkZmAEUvwj9m9T7MlLOgEoy+pyis=,tag:hIS81RaT8pMzGc6JuLRnUg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:MhymBUNoADDOYqe3+3Er,iv:8sy2567O4W2a8Y16N1VhixBkpwllE5gm2rYH2Z+j6js=,tag:p8BpVvnJxVnoDL/ggwPFUw==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:tbPLGrkxgDixJEVGsEEpbc4wTkhrcnvA0g==,iv:JRBJMnjcs7+NfC8Y/Fa8brAy4OM447P8ERToMdoRinY=,tag:DxDy5vaxzhxl9SbUem57aw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:9eBTZ4pE/0PKTeLuQZjpRp20ZS+FGkSJofmrfSA2cQ==,iv:SgzXIsQywcy3rzYcHe7jgpqj5LftD/DJMOnuvQXPN5c=,tag:Juu2m6ufbS1ji2/l7/ncEg==,type:str]
-#ENC[AES256_GCM,data:ezc1qbPy3i/ghV9WgPkyoqiZQdeEeV63NUOop1OdJzY1U7AZIZ4=,iv:do1ynRV6qoIVhvb1iT/UhrpCyzn2P1OhitNPKVuc9+Q=,tag:l9xOUKVOXbsWJM3fHYik8w==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:bH87KCUCrXBApYYrtmh/Z0yp71M=,iv:QePwQE28VYSEAV4eECx41sOCSiMc+3BTUluHr89N5Tk=,tag:pxQxFD0hvJUZno0VGifMHw==,type:str]
-#ENC[AES256_GCM,data:bFDgm5+/xM5JVIFdkXA=,iv:wH9EET5+hqUDfin7Qe1Zul0ps6aXjY21Zdq1yQUTLI0=,tag:4+ZWZfkYkSHGsDGLjsyapQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:XiT6+d3xNn5qfCxkGA==,iv:uVvbAlNXZST4Qd8XVUBw/bO/hnDbx5MKv6ss3FijnTA=,tag:6UU3W5bZax67FoUMmn7F2Q==,type:str]
-SVCNET: ENC[AES256_GCM,data:u5Wvby4d61OTpv/s2A==,iv:UuYZ9qO8B0An2Vr+udySUy4qLJknsl/b1HCEoB7QyIM=,tag:SYWu0XJnRVlOCkq1o8NOQg==,type:str]
+#ENC[AES256_GCM,data:src46QWoHMDOdLcRgDpqyCf/jNELcAcrSfCEiagx5LSxIj5njbQGwIVc8/mqIo5L2QUdfcyb+Ba3KVscI8FVMqk=,iv:Zywjs0IYaGUfPu1HVbJ9AeKMjRvtfHLrvM599xH+/A8=,tag:KTQ/gxgYBbJBzhGrW8vwaQ==,type:comment]
+#ENC[AES256_GCM,data:2PSrDG+J2ZvCKBeosm35AJaUfmju1ex3+dXtuUqcLC5Cln22F/jsbuBEL/0=,iv:D9QU3JgV7t0e+wSYh9JIEsXbq+2QcqNPTzH3YsYIE8I=,tag:sDwMrZCuDg3T0ly2PbhvDw==,type:comment]
+VIP: ENC[AES256_GCM,data:jZd6HLT426AiLPSE+A==,iv:6A2702QbkcHdfpcx5ofhsxi7MuYRrYn9rjItpYuu1Bk=,tag:gLD0pKswJaUs7tdZm4cMgQ==,type:str]
+#ENC[AES256_GCM,data:isprNnNEfo/bLV00g8jAg5eIVZyvSyd82Kns,iv:L2KnNz86IwCC8FnGKdqvB4vqo+avZs7HI57FFMX6LYk=,tag:Q2hgAuSU3SBEvWRwJkC1PQ==,type:comment]
+#ENC[AES256_GCM,data:sxJNljcHddTx7o1fWl35Q+yxFjy+GIjk0w+zUeqfJMyCORXQuRfNe0XV6SF/Io7EFgA8OBnf81LU7FTM86ZttY8P2jJqYNvh/So4/W+b/jRPC2tFATRle1k=,iv:kdWZ6kNojducX1IyYml5VtHIkM9PhTCg2QfpOi7YPpE=,tag:AulR3Sfr1yTL8fW6dEjWLQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:zTyj27xLEAA/R5raq94=,iv:xzRP3WyvtfqzAUTAfB52hPHeJ0a+VkeE/ZZF7GQBH34=,tag:gV2eA6wVJybOld/ddtkvhw==,type:str]
+#ENC[AES256_GCM,data:Uvn81jCR+w7SinmzUjibCLgWZIZGGmTDnui8SO4732LcpA==,iv:PFNcha/dKOdrRRNRNp6xCqGeGgFvURCrExCf3rfHTXM=,tag:nYKYN+4oyqxo6JFZK+QDQg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:d5W+WZmwR57iO6HTtA==,iv:CV9va+/3Dd5YxGcPDcG7A94bo3u/VaxED+/Cax7ow3M=,tag:HcMPbMm4BVO9+nodWnfk2g==,type:str]
+#ENC[AES256_GCM,data:5dGiBDKWguO0N4VIBj6/pN4Da6ozYEIekCeDqeuUmTC7XTBeMK3hCeBrDPvvqeM=,iv:/l3BmZpwNIyrq00VrNRBa+Gp7CYUnDn7M5hx9Abo0xE=,tag:yxm1Cpn1vt+1m9UJgqABTg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:3MjsFu+vr6jeNnKOngFAD35107BbtJ4UstRbas0kIA==,iv:bx23h8CQYoyfrMVkPzYYVr3IASKDpj9qn5jaEC/clSM=,tag:dj+6e2Ts2NBYxirc0Hxgzg==,type:str]
+#ENC[AES256_GCM,data:Va+z1Eq78P8tzzNKiRDybkQy+eB9W89PthtM+v1UgLam2p5+MCNAGlNBLkNdSaiw4aXNZxn45KrEQ/Ysta9VBrsNA6RdG2zm3fvhuMFTc2WnWA==,iv:MbjqkwQ0hd/XHRUSSJZywJRmXQbf8Kp3uD7gB+N4bXE=,tag:BVoyQ6VtEljtdNFos+nV4Q==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:zk8/u06IuQwrTpDzs1C5,iv:6KeFTz1G13cblXoDMREvGhmtwsX5CiGDxcPpheKCknk=,tag:9y57WZ3mfcM/6eaC1Ep6AQ==,type:str]
+#ENC[AES256_GCM,data:d6DpKNr9BFQ12OPOSjF3YT20KVFTesX3Rtcay0itWlAW,iv:GWGyvUdZkv+O/k59BGP6DqXcsFMkf2TrLq/2R3Iw53w=,tag:TDldAacs+GCxliLi8zGYog==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:EDM6/x4X4M7M8sK4FCGs,iv:ykbHuou+XaXQMb/LJxTCupIdZ9PjsV+HCSC2LhHolkU=,tag:q8hFJ1X86qR8rn9NePNk0A==,type:str]
+#ENC[AES256_GCM,data:iulekEnvp5VkDr2S9l0fH0zKdXgRFBKyDzv3nsSWuSLYf/mU0Be/s6jpp3SIbqUj4LgAnm312o2trMOkwg3qyxJ+o31Xbv4BJegkfrbntSk=,iv:sOZxcriddOFcWS4xZfHEn+XIo4+/R0mG4TP9aPxYw6k=,tag:V5E8TaEh3CpIehcQemtX7A==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:R/pphLtk61JRwbQHvaKJ,iv:JWSmNqbTRvhSY0l1jhei9MeqE1q5Gpe4TXuxr9VXFzw=,tag:GIONEDhVrQ/uXwLaRS+vMA==,type:str]
+#ENC[AES256_GCM,data:Z3KHNRHWqsXM8jKETy90tiaBh/xyZLD2SZF2GRqFdggrOnhnUx3cgwrbS9H0McqhPVhUFc7cZ/hjC2GUv/E0X/QIQHc3F85f3K/m0pRq28p3m9iwAP5G,iv:yN4QDhpegP5LioI3nZNp1e2ETdJBi2rtpAGB1uroTS0=,tag:yyLbPwRjutK6G9dgRp+s+w==,type:comment]
+#ENC[AES256_GCM,data:o7TfmnQRzJ1YdcqmYWQS9wF50d798i/RIGWThAgoW1elm/owf4A/feplVG0ajQwogQsJ4MSKvItkBEQnczHV3IB3QGDvSmy4JhmMtJEIV8PPAso+bcEfI31BdHq4c/oxqCM+toQ6ys/zoS45aS78KTev7fk6VcGgo7HZDg==,iv:2DCCtNza9beXVt4penbvY+U4WSBsp9pbGL5XXP23yOI=,tag:s0uIpGaZYC2jhlNMyMfy9Q==,type:comment]
+#ENC[AES256_GCM,data:noPB0MLmNhUCvcN5Ow/tDMxdEslWe7mYV2YZK0pGviUbhVrbiACuKc/mGnWaSOZewW+ku/np9t1xQyDqepor7iBZhBRTDsf9QHqMr0zDCnU=,iv:mfqRyAuf8uzg6FtsByPBy2PGM5Den7fvnzKmZclatoQ=,tag:e2GtXCUfpdm111XfUcQUkQ==,type:comment]
+#ENC[AES256_GCM,data:Dx/K2ez9iuHp4dmKGNDhv6Q3bqf9uf1qHKwM8fxiLWt7kBV1A/bNSyNhw6UGA9hs771B8RwG,iv:s6VMoKyMmVfn76wzdBT+IBOOS8ESbJxlM4FT2uNEYM4=,tag:g1yQZ8x42ZeH9JXParilOA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:0IqUm/ZfHH0BEx6Q,iv:RNridmsBe49jLL3UgjDveKHD4LRIxt1es5Unf2M5jsg=,tag:09DduAYCzI39oFyJKX95AQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OhmopHkyK2jYtZYI1sI2WFE=,iv:ZWJObkK39UFGyVm9C6G3Qnpd3Fh8DFdLiudkCTZM7a4=,tag:VNitUf7DLblYzGS6t0NEpg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:SoAz1gGqHMWeAYdJqAc1B1EMbc3mlUlUbhS0dXTfoFM=,iv:wr6FfyRYXIEZenycJVG0aSc6xmfaVptp4Jj5TIpQn4M=,tag:RNOO8EPe/mKPzhu7zYqtyQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:HglIDiEfdNTK11XZcI5oKBCLA4BdhVT41tTaXbt9SfyX2s+YRTkaFg==,iv:OyoPvk6bh0gxjJrzqRVVAV+sww3pQbFweAGKvkQcOOI=,tag:rIDcbtopjmfiNUJr7bgwQQ==,type:str]
+#ENC[AES256_GCM,data:CpO9Zh2i7HiVHn9WGkRiTTqZq3Fa9WfEg6A1tU+VS3koUgK4unq6JExC++p9+lQdu4Qb1/pVERXNbySbWyJxiw==,iv:MteAE/aDb5ninN3SpxWds3Fbh+Pm4L5NL+va0LwD+iI=,tag:5i4PzZLl10nWM6ZT1ZjUXg==,type:comment]
+#ENC[AES256_GCM,data:qPbHiFNZow2EfVFZzH3mER6iRa0Ze6k3tiLllMSmEoJlG8/CO4PcPh9uY9fGjljtS79xPXRlFZI=,iv:k/JGwGYfY5toPFCthlX9f0eC+xZTiPOlBgPemxzz8lw=,tag:6aK4N8FbXPlDDjC7lU3ahg==,type:comment]
+#ENC[AES256_GCM,data:4RkfmbEXChEZpHepvWGoetNAgTwFXJWPxw==,iv:1WT627cGuSVPPohitIn9zmdh+sn5/FFmV9CMJDodx7Y=,tag:M4OC4/p5XuASPcE/uvzD4Q==,type:comment]
+#ENC[AES256_GCM,data:JOPKOVAfCvh2S+OTFYG3J0B6f7Jc8sKAK8KOWDUxScZXYJZejrhDYJT2lk2/GvylrKBZdc75YqGmyVF4Rt4K6SMlRRY3HwJkjjsKyus=,iv:CYG/S4KHHyrTrf1DSo8nRo4lJevCkBmgMV8SPU1aQus=,tag:xbqXR5X0CYzk/G9Z+isUYg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:YvDDQeo6EqvmVBovpJVY+kXVqR+nX/kfWqM1pQzkqrSziDAjmD2HsN1yn3ZQoez9,iv:v/FSfygCS2fyeSVbW7UrSGwK9rk8qTd26D7qfPTOR/s=,tag:vHtnEmpbRVkP4Y26qpgJaA==,type:str]
+#ENC[AES256_GCM,data:kwbQ+lPyJvswWYKxpK74XfU5V21PRdGO+O0j0UBIKvY9FD3an7r7mGc/F6flht3tk/aAvE1xIZZ33MdwBPCk2Q5N3LY3CB4=,iv:0yeCrlSJX0OliOmnhM2tHZWbRFyRHooy/MePsLoVvAM=,tag:ZEmZ+W/08NZijYJ9tLkY2w==,type:comment]
+#ENC[AES256_GCM,data:mpwZVNTNiq7EU3Yj1as2VRBaMBG+9LzFIeAbwDQ6OV6Xy/t9DihAIOGL4TjsKB39fYwfsMdG,iv:Ssjmc8/louzdWRYelXXLPOcz7kYKzl4sp+v6nOez5qM=,tag:YjHovgsEvqowCXZqmNzJxg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:2MDnQunFHg==,iv:1lzLVPnPEztfTj9FZ5xxjIMoUs0krzuNpu4k8ZzlSjo=,tag:iagtc0MRQB8EVhsuxx/xgA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:ZiWiaBcsLdJQu+3FqBBvhXeuB24=,iv:EJgC/hD3XDMRepBMt7+o4IreGgEecXCndkbV27BEtx0=,tag:/Pv8Vjz2eMII1P/P6yzyzw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:5PUgYCpK9PULsm0=,iv:w6i/3LrPxeuFw9lJUCxrWDwkd5DOqpGgP4EI+ewixhY=,tag:4dkMp5lKtXrghnPmqmQ2pg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:OOZPbxwbFbTuszLCnZJ2,iv:3m5dOvh/VnG17LyI83BmQPIyLVcXqwP+NZm0J1/2gv0=,tag:jNqW6e2ecVYlGSmVVeXsgQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:YAEd2FBYKjFp546M+nGuPc2o8Wtx1K34jQ==,iv:1VCDxkf3DMKzj6uvpWJtzXoCLoi8xNPOgyKBYkpuFKs=,tag:HN953UXwapqA8Sizw8mN5A==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:lG4a8RkcKDP1tZoJTVeRon/uKHREVv0XPKeQICJprw==,iv:wK6CZO1K+2KbHnMBypiAitz+gOkg6u4cMtT43v5JW0g=,tag:9boWI7XA7Z3MVFXvRHqPZg==,type:str]
+#ENC[AES256_GCM,data:5nVtqilXzcioEvhRXLzx6uA5kmaIeioTJU0wQYm2cX4TEN0xMCE=,iv:Uycn4LbegFw9VlICE27u4db4aGvkbiuB0cv6jF4LUGw=,tag:m8jNYT/kMPwelUWuwyBihQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:WNQ1H+0aN6MgA+tFS0vNA1S1TDw=,iv:Odhc0YIcA1eLScvR9YIhGZ5MsArttDRhCCzFYRPqOlU=,tag:/yVI3uMEVrM6yfwHU3OguA==,type:str]
+#ENC[AES256_GCM,data:iYDkTmhYo+DRsBrEQOY=,iv:3jTDrjchnsVTahXpsgw+CQJvDAImkD7LCuIOwkGtrPY=,tag:V1+dKmB0mQFClZ9RVE7aJw==,type:comment]
+PODNET: ENC[AES256_GCM,data:LQWsw13tOA9GE9Kb+w==,iv:sp2LmV6m5SNQ1QdjHvMHoxAWtZVmRR2npErwQTOfWSQ=,tag:8vdcbDb0l0Lo9RFDA36l2A==,type:str]
+SVCNET: ENC[AES256_GCM,data:tGVb3amiiSgNYfdlaQ==,iv:YlZXQi27JpT32J0BjcnPfGgQ/x77gfPkfpTTf503HmU=,tag:HW6q7p1B8ek5BWebejFHiA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWUE5IaG1VNHZHQ3R4TWlm
-            L3RTOHZ4aXBjTWRxYTFuYzBUc0xBNG02NUhvCmE1TitJdTduRXd4N2x6YU1YSTho
-            Z1hQYWxBVVJpMTZiZGY4Ri9ZT2Jqa2sKLS0tIC9QRnhJNmN6c0ZpeEw4UVM2Y3Fn
-            ZkltTTY4aDI0Q0ZkZ3BJbXdMbXo1TGcKIC3emp+Fi546buMJBlpIovJsgWekULx/
-            VJSAhMWIcYnlflKUL5HFNCj2DC+xlH4mugiaXbgAnI83pyBpr1aZcA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudmFUN0lxWnFJaGJBYlZJ
+            eERiZ2VFc3p4YlpHZHB4UjNQT3F4SEd5MlZJClk3OFFyR0xsWTkvMHVSV0pJdStP
+            ZkpXTTdGSjBMVitrcnhCdEszNjdPVUEKLS0tIGdlYldUNG5jdVM3T2FDZjE4bWVt
+            bDg0dDFuZGxnVUxjb3ZkL21qaDFkZTAKnodVKRdLS7vrir1e58tdY8FQw32qqJDj
+            D63PVchg4AA6e4kiUCTEcV094s62+uVnIn9GiYilqRQkFWf8SWs26A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T00:22:55Z"
-    mac: ENC[AES256_GCM,data:OjVC273yPRUf66yR6LLE5RXMIpoM2DOjT/+Kb6DjpbCrt5DHsTAPq88p1w9qCz48gXyDClVLHa8HwPD7rm8SK7HIJUJTqSPxOZBozoAalCwJnJo+6cZSkQJ/SFCHTQ6hpzysKL2LQK5BQumDJ0mmOhxEp2dI1u5X23izdVarFe0=,iv:5r/3uz1HdSm2+0IVOP+5hBF5GDkHsfsdzzW7jsF0HV0=,tag:vu99ySo1ZwJaxl3J7OgaTA==,type:str]
+    lastmodified: "2025-01-19T00:24:33Z"
+    mac: ENC[AES256_GCM,data:MABmvPm2PEI1SOTk/RFIHGOW346CamLKMrBQ/Q7jaB3S0Z9wcp5TK7d4ngz91Tjtb4kn8kmOq/4ylKJFS7ClovqIixlWP9pUM28VuwzbuauKnevTyf86UTkDbUSk87LfNXaGz3QBwqQurphbPReMDweR3Wrh5vkahB6gtciJHv0=,iv:ueb/vd6aEI2+QmyLLCWVZu0bgy1AD9sohwcmLY7rHLc=,tag:RHv0ZkVet4CDA002Xyj/UQ==,type:str]
     pgp: []
     version: 3.9.2
