--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:vUT/0yEuS6f+lVsPrh9LxTLwgyfV8RyJtZmQC5ALMXMsA+2bUiBHkzAzHSGzOoCVIW2Y6li/clrrQmd6Fc5tAxU=,iv:p/Zs9mdtmEJ7JuWb+QzAEIhLZoRZ1yV7Omr3hNwXVZ4=,tag:yfXd9EpESRr1JiwSJYzIzg==,type:comment]
-    #ENC[AES256_GCM,data:M5vZYIPOeG2Hye2uXO4LZXbF0a0mG/6u4TOfJ50Qe1kyCScW+XtMN8Pwuc8=,iv:7sOQfDWG4hHzsid/emqFfCwamj2QMg29GZtm3PEpg2M=,tag:bSuen0jQYG26uTo6aQWFjQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:Q+ZCBQc7C5aUmHDGXg==,iv:qVp05IP1qkN2wlSxw6FvDjWc65U4mq9XkqaBULMTjIw=,tag:gz6TKf4VUn8Ti6fRotVOZw==,type:str]
-    #ENC[AES256_GCM,data:qCHfzAYKE2mH4+97nvvUQA2DQISUDeDj+mSV,iv:zh2vPurumKaMqmu2oOuqcskF100fpMWrbSYpFg0IYq0=,tag:xMcw56897TkuVoUs57k0qA==,type:comment]
-    #ENC[AES256_GCM,data:cTVBKlOePk6m2IvOJR8kM5vArA4UVatP3zKb8KmGKi/mJhMZywXVnHA3FsS0w+0cNqvBMERU2LeJoBOv2qfzvms/KW5eapmpi95AQyH1NMryTajXd1akb/w=,iv:r4tKa12MdNvsSMx9HksY2KW/5rgM+aOxKF9UhN8LaNs=,tag:PKob0km6F+9nmI3NtfpbuQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:G/JulXMCgprEz6fpA1Q=,iv:vXwPKXMyVl+7C0aVIGFPHnZuREmzFdZbF9HDn4pn0R4=,tag:wSdhStfdP1RH/LgF6tuRPQ==,type:str]
-    #ENC[AES256_GCM,data:8i/0a5fGTkul7lOasmejVwOY54sqDJthtcFQB2Q3IPnWUg==,iv:Cr9xRS0sNzOPJDDlEyxxPv0eXn+D6CnL43QuHzb7xUs=,tag:kZw7DmTMQ+qgbxNIt0/l+g==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:k7E96tyU/+kS2SoHFg==,iv:EH7KiC2CGtn8KWqTy1VjxsfWicEvuIID0xSvnynJkyA=,tag:oN8RJrNwzYs9hdVGSpklGQ==,type:str]
-    #ENC[AES256_GCM,data:SpP3rRwtAoDl2vA457fU6ppONk1bPmxrLY4knC9s1MN90Hy62QHoAwRn7DW8khQ=,iv:FmQIfuQR+BKQXZrdJnflOajfYjRoMjOfeOjSYKnGKT8=,tag:1iwU5pUTpgg16le/1DXk6g==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:LtbU2KuTFbPARjPzVp0Bnvms0oe5S7vwHMcp6o/ZSw==,iv:QudI4wUaBIWflekTmuIINkhK8YrTQT3MnIR/pNRN5nA=,tag:TYnx+LAynSYk/3amRZmswg==,type:str]
-    #ENC[AES256_GCM,data:E+6tdSNoTJHdKf5PNU3/jPMRH2ZVnHyysEG+GOoZGxh4dMLNqTwHdzS9HWdZjVwMItmWKjsHh3q2GUwrIbj59kwng88mzgYXE61BGA/bBo4ANw==,iv:44XyUjxyPQthaMEQN7I1ATjEfOUNLcFpavnV5xI2QCE=,tag:Z3srLhXJohtAis+DsRJKew==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:nwaIrQvC2OsMJBa6wJfN,iv:Kamu/6aTTA4N2EJd2yD+/h6ZUjZRh3NYADqnO1J888Y=,tag:YH8JVtK939eYuOfD8z98eA==,type:str]
-    #ENC[AES256_GCM,data:NmZcv6kxtdcIOkR7ucbrlst9UAovtEn2gKhxhgUlXBp4,iv:/mXTNYBGMlZD3pZZ7pDtGVT14nWJoZ140Ygl600EbrU=,tag:fQ1Xoo8vTCqH5jg3ZG08wQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:zNRSA7TcdsAMqDefgH7T,iv:Z5raEVHFbMj7Rzd5mjSCx4hni5KC7Rgwj+Jt+H/cWAc=,tag:KpGGHfORBpnF37ZiSTrptg==,type:str]
-    #ENC[AES256_GCM,data:WSsXIXksmfr1iaWkf3A9OY0qJN3czfBqOotyAWhnbNubamH9dzteXAwjJoKVZSaZxMONpw8x1Atmy2FilyjeDiUJFO0JcTsqYFla6EC7U+Y=,iv:AQZSrTYLnl1pKkL+L5FeiVnu/qB2YClvKRVhkfYp3Vo=,tag:oCHpQVSoiIUldlVa8YIabg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:GQ5LvWXpEOYWizoLZ1cS,iv:R/wdVppZwoaIZU8VMmIA8REvpGSJT2ERTOS8n8Lf9Hk=,tag:r9C0Tv4nMktwZudIcqWMuQ==,type:str]
-    #ENC[AES256_GCM,data:q8I1tub5j8ObTUVHXsCJmCxBJu6FaOQkEdTTOaAsxVTC1qZLZWs6aVVEPYDo250hMo76Qu73pACK9KXXqb363NPfIOOhSSkMRZKX/pP31GCUIdaVZhkD,iv:+LJWC8+0DrkXDkUVKmZ+p82TVQNYvSQYKOACQzIpmuw=,tag:Nbgpa/hxD3PH8dFEAGif0A==,type:comment]
-    #ENC[AES256_GCM,data:WEsr7XbopULOTzKiy8FEcKYBkySwrTAgg5mCNkKbJdDrqQ6HZiEB3S2Qriw+bIUcQv/Vf0Hzliy4nzgEBOp1y+rDTKzvjCVM4QKX3NZj6yw1L6K1rkVLsNu5DqkJT12a/uj2ApB6FDXUJGQiGuZzBccp2TVQCeiegbXEsw==,iv:nNjP8SRKjeu+Mj1DsdatY1zOoXfYfzpiqoX6CTOfKZk=,tag:sFKJEgAV3FkpvAD5GrtTMw==,type:comment]
-    #ENC[AES256_GCM,data:/5BIH4MyU3wgnKVxWjB0iPrzMcF4RzB0Fs9Vy6WJb8nk4W3bDjFnxVrNTElnETlt0dN5hM+HPqg77sdUf0gm+GPKaQ8qObWmhe0c4AkyaWg=,iv:mTimBxx/oIxfYFFpBXBCgH/oEBysLgjeXHuuMROM8vU=,tag:fKPK29XdM+osworLuN7twA==,type:comment]
-    #ENC[AES256_GCM,data:NoecSNdf0ZrtlcMTAC4SmDsglHIfxoPJz4tQHBM2eA17oZI1oZ7AtnBxYnaYhafaCxgU2RfO,iv:NDdIQzXa7IGItApvaD3D6ZQ4uj3ueR/NTqwsaGghOJY=,tag:P1KCI2jT/NhU+XtDgojagA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:CDSikcXnEEgmj5WR,iv:DCCkdBXCxUqN4tPWQrrGxJjQmok9NKxHkIYwt49dGrU=,tag:SqXSNuProBSweezCR0e1ag==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3zV6KYN1kZxd8yUy/bhipHA=,iv:beCm5+VEfVGr08NtYBOxAFJxLtJpKL2ZytDfHMiOrIM=,tag:+Q62nMqOMVsmF0wLUrJHAw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:0gFOR33NOlICheQ/IqMT+YqS4CKgX27XBH3zFte/tSI=,iv:E5ODnsLthdubs3Z5BcStkxtYQgGkvsuASgfDQpxsjaI=,tag:alohYhEjcQJ1SSpM2z9Nmg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CO3+lkOnJtTzi5zq/JrEfRIJ+TV5v2/WOujLaT/n9bU/WJTzkgN/uQ==,iv:0o0lTtKkIGk81n8j/eZJdOLeVvRz/+fBGMVnsn5GGKw=,tag:lRj0rnCOysAMIKqJTvSSQw==,type:str]
-    #ENC[AES256_GCM,data:gOsz2uvlmKWH7DLPQFvFMOvAHdh4eeC16Z0xkIHmbqPVH8eWiqOQ2trzVFXGwFKBUb/8OtrCGNuFz15yo5PedQ==,iv:XhBv4lEPluvW8UP7CJBkrWfTmpFprKuwn9FS94xSQIQ=,tag:4nedXLeyVgTd+l2+c5kvMw==,type:comment]
-    #ENC[AES256_GCM,data:pO+dEimMaGEc2mR5GuYXioO3T9YeDV/kqzGH4xuse0V0m7yrQUNBBz6d/cKTXbbYJjyNKR8P7Dk=,iv:Y224ud26lCAiq4QYL/hODo3yNgxAv6pV6A+Jqgh6lYw=,tag:7Yqti/yivsOSc5177Q1Mlw==,type:comment]
-    #ENC[AES256_GCM,data:kBggZrc4aKAV7b0njec3FR5MjZwCsClGwA==,iv:cIp1vhXwmSRez7tFI+6Qy5WZovMCFraZgxCBo3AauHQ=,tag:lnhFr7fGcyw7ox2FSSzfkA==,type:comment]
-    #ENC[AES256_GCM,data:kX9Be8nUfT9Fn1rGaztBTmfinmk+NOfLleMGiLGS+S2wXr1GPaDGTnvLOA0EYnl1M51J07INkzW0MMhjLSBrjSMXUk3wmQYzX+NfM/s=,iv:yOmCELlNuSUR/SX8N0UWMyMKKcMaXX+DTl9taXtxAho=,tag:OF9M1oz0njOJsUAEWAfENQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:u6XRsQ0IEPG7ItjaVsqGE79Dl5/Ps2YswrRA5i+ExybAnBGDkiKAcWkeIVGlveON,iv:UOJZ3TpYItRTu3SfcUfF7yGTxSFfvDtqLOMGq6u2/Xo=,tag:D+c4AcL5aAjODwsorZ2gMg==,type:str]
-    #ENC[AES256_GCM,data:NU/KTbj+T6h+FkuLpBdRNTtUC7SYqp8NrhUEvYhRadDr/gV+lYXpP6VFT1ULGOx4nnNi3fJd//GsiVpYoTOgSdMziNF8+rM=,iv:uHo4ofEwCJTpJrth5lI85lgcwIzOPhs8Ti7CSzjvdgg=,tag:pDVQuMrTNpdvmyepB+B1Pw==,type:comment]
-    #ENC[AES256_GCM,data:ULwSe+K/wbWn+BQ0SzlCPvtoEl0vbNak8K4VpApvdCaPy5VDD6Xlq4KkoP9TLNAGkM4YVyZE,iv:92cf2tjhC5xjezU0clcTK8saw8Zms+XJvnugl7/7hg8=,tag:SSWQVuu9gaeVjk+7deBpzg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:YDN2D7eqbw==,iv:yisjsZH3SJGR7vI3i/fuwi4XM/+be00kzY1kXF0GTUA=,tag:dm72svWm15FuaSL1iDM6oQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7Jj7GVhZYI2JuIzeKbUxsUKs69E=,iv:n7j/7KlEA25uSiIMtHndQTBJaaNy2lYqAn02kLslBDA=,tag:32LOeQvOcZGWiK4ctf7lng==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:PXWo+RTNe2ILPCM=,iv:5o4i6vifEnaTFX/Ekefx9kTvWI82q79cFnkKUBXbN2U=,tag:CMbr2qYsykGCxViYBuxLPw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:NV5KFHNo2vNLSp4WRDtQ,iv:7Y+ui6f7BvxfsUBvDBnwnwcPOqr2PGsodcxPThDNSH4=,tag:DrhkaKB+XApgv/cKeUm4vw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:fxtGz4uEnCucVjPkpcFx760JGpp99k8sHQ==,iv:/5qZ3mfuvpaEbwXOxdd2RnDPMDhidobxsnz/ZM8FcGI=,tag:bCd1CdiAG+F6sMcTlErMdA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:8J9dJSD53rISg8Vacu8ZLv+lHdeg3ehopig+kSMFcg==,iv:G1530hzS54CIdpHjSrk4wbtpgZjX8RmjdFN518dk+Zc=,tag:K9yZDnnk3iabMbMWheJFCg==,type:str]
-    #ENC[AES256_GCM,data:O5uDw/6M4TVHdse1DZNixmJQmQOcj5NZjvH1NuyWQPhfRVoBF1k=,iv:1Qd9SH/r4ukty8Kmxpj8pI5JBTMvY35TdsonpMOtgXo=,tag:rQkpaTKt9Pg/+UJgWc+RHw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:duZC1rJtkBL5YZ8bW9pWUGc9OfM=,iv:mkdL78+ynYsEgZeVdRV5cJRDM4dRc4b7PsGotdOxhVg=,tag:yJJef7kT19e8HjmwaUpWdQ==,type:str]
-    #ENC[AES256_GCM,data:pkDrf/2G5Zxc2iQgyDQ=,iv:9Y+1ZUEJqiRz3b3Bc5ogD/o8vQYfRuFW0YtAyU8ja0Q=,tag:gEEUdE4YNhGJYFpGzeg8eQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:qAUTlTpF2eEA2MrawA==,iv:Pq/4uHcJKKlK1ltFsB85rCgOpNObEP35uq5uPlJmwY8=,tag:Jr0B2PaYTB5uKvDKiLcXGA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:DBfVrN06TxPhceZq5A==,iv:ptKGtBk50BOAAAVjvgMsKK1oLKWN+q/qIYt5x1JzZUU=,tag:21BECN8luY5BC523X8X5cg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:FWvLzA==,iv:Aladxp7pofJ9pkZIp7RmK4Asrn4og5ZhodYO3vfKBGw=,tag:anKwqdfryBt8g5vxyu2FYQ==,type:str]
+    #ENC[AES256_GCM,data:OgwWvhfrsaVMYTmBIuWPW+kbcmUaLro/1iWSqNeS6Y0qDaE81n5l98KMGULZqQK4DvBNtaKg1lV/qW/Cr31bk7k=,iv:rnT2rh9hYMLoXJIWcRR2lLpQcpzxj7N2JvNnW1DOh5E=,tag:fROgcfqDmZaPSGIN8yqsSA==,type:comment]
+    #ENC[AES256_GCM,data:5woxP2qf+5FN5EP0AVTHyGbvBM9W+QtV8AFyReFtYAy3D5X8DSsJuY+EV8g=,iv:mx6nR7vP7l3xGOee1xO4qOkFazWqEo34Ta650c/H31g=,tag:mfk0UvIOTUDecAMXKYSWQQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:YNWesa1SequZXG1i5w==,iv:VAx841AkkkSqpIe4owAGRTmEhYOdEHYbjAp5iOYrx2Q=,tag:1teAfaQwTFkcqAzVQhkLNg==,type:str]
+    #ENC[AES256_GCM,data:Iirb+lnyEGwO4RFQH+aHT986TKqTNazQZ+lA,iv:2BHLgKeR3VHfw+/He6REb3K32pSjls1imDJSuaQDpc0=,tag:aJlidmJde5chIQx5pRGzzg==,type:comment]
+    #ENC[AES256_GCM,data:bPkYWUoLHG9OfhARVk7XFR2X4nG963Yrcym/FFZPIeT2+dG3Yc6JuO4TygC8zZ0qZsGfcHruwhxvV45mmTFmGTAXpwrH5kNCeZfrMyfblOeSrPzHpqeIadQ=,iv:kc37FcOo9f1WZQeWbRIyEg0LoQ5eVfKctuDiMRyIhoc=,tag:Bz00k1d7jWCg0zwbBzD3rw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:R7XFpyf4YS+YQwfp+PY=,iv:Bg3JdfhPXgGzZnl85ar8XPr4Ql8S+6luKcYIPKskf7U=,tag:jq7Oz1uVjAg1TGp/LBP05A==,type:str]
+    #ENC[AES256_GCM,data:dzNG7mvLMG76dfY0qUsyxsJdZfl5a8P1hVJsFd4trKXr3Q==,iv:ZVjyeGVs0qLbN5+OLfItKyXPSYdxuaBnIk+CzdLnKaU=,tag:XNCN7/JLh4rr4KehN9AmoQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:FO3JwD5ajK3DCgkZDg==,iv:wMNx+lLkbnzpx0o6KV/cK1KwgtBFZO4/8UyRKEaXn5M=,tag:oErpKW+DKYRgCsAD5CWdZA==,type:str]
+    #ENC[AES256_GCM,data:GX+LOnmWItDQddwI1cNkNa+wuu/mPXGXtlVd1umZmh+Gt6EXsQ883HRKjU7nt38=,iv:bbuFl6JsDxa7DMbJgLdSr1gN7v8HA3XyYcddbeN0SKM=,tag:5ihbtLnb7X8kodw5RlnHNw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:5MqyCeUe7iO8z9W41SaGUn35kCG5gge/s4GlaRvDfA==,iv:plj/OZp+JiR7epO5+CrDgxgskbEre2w6zTvMkVcnVeE=,tag:ApvsbYefye7ex5Kz6Q+6Qw==,type:str]
+    #ENC[AES256_GCM,data:6XvacaJO5NDJGvV3JseP/YpVCubNruvsd+TXItYADiU30Cv70Tuuz/rjrx/ttZiARSQdwZQ8FmXCQNBnc0VV8x8qiGdMYQY7eVZMj0lsEuXbtA==,iv:2s2fGsrfr6ZF3oBMXEBP6y0MkrWmxdW8QDEvK5D70iQ=,tag:R4VGipLqsRMfRxf7RC4fJA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:/N1B+kveL+Y4wxQaNw1C,iv:0EG9g6hJprJ4KnwHxutcnQTBQQ7tECT6LGw8WerhQ20=,tag:LmC2f3a+cMuCQVywvxdGZg==,type:str]
+    #ENC[AES256_GCM,data:NpPtvaH7pktHeJKIEqvCkb+laxTR7K45DCSFUkOjmAAj,iv:i3vpivaoYe+DfbKx9/fyEbMGxyuUEofISAFe9d4jX3o=,tag:Ec+tDjhxs9iof/i5t74iwA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:vT5SoV1my5RnYAqnmBqd,iv:gZgTEBf2uMJNtOf/V1mTkirPxUj5NQJPErn/DMy72+U=,tag:YaJsVoGNM2iwYseEpVI6gA==,type:str]
+    #ENC[AES256_GCM,data:+9JF3kEk70Kb6ROUlFU44fpAUV5x+E1JnaMlILDA6jq5eh35O52Edf6kr1y8tV7yMtUkoH0lFnNUF+mEI4nwYjZsrEWHNIEqz1OsujuD2hk=,iv:pLsANF0nrYaSbSIvjgJOZEXCyv1M7Qmu5VFwSnkiO9c=,tag:L8Y4Z3YQmhvB0IphhYZ8sw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:2b5YqzTmC16BS4ihKNSo,iv:nJzywAPp9R0P+g3Vq/jpTZD9JBA2LTBpfsEUAq/wH/M=,tag:pIzkdsdiLzfiHtfPIMnh2A==,type:str]
+    #ENC[AES256_GCM,data:OiLhvmVDsQJDb2Awpfk/WYJLjjfr0p9iF+u8eFfWPRupbTMI5lja4JJldIQ7BLGNZ/HxU+Z3cyJRWX1BKkXHNulSxBgSm/4UhYLOkD3Nct6BoBV3H3Z8,iv:E+MUtb1W2MYnsza5HefSlFSvlIevoADGz1NJf+dW7ms=,tag:m35WJPXI3I9A2WY4oUqdvA==,type:comment]
+    #ENC[AES256_GCM,data:XAwG+wBaKk4M8gZrZ3GZ9AuA1NI+gnaW4cf17TpeD3v/RfW1aX5f+HG5FXOncE2fRBn1Y5pe5oWdjy/xHHCklx6yPLebjfDI/08+Kjxg+6UyeuFCc9d5Vb2VXdtlBAVhPxZKf036rQ4mj2OWd0Y168u0aB8yHYro9wP+TA==,iv:U7wiUwI6PF07xmXP1zjcC4742hlzuIx+zar7/t85J0Q=,tag:f5bTF5wdxMGbR3+iOyvbJw==,type:comment]
+    #ENC[AES256_GCM,data:10i6sYXz1YDG9kCrSwRrHUr7IYdJPNLERwqzbQLwjx6pBeg6T9qUOCsZ1vNe0MxzJILXcZ8YGejulBRZr9GDQXRlARitklBZdYKZkIbfiRM=,iv:FwVvc4CrFTuiv7P+A9c4TB1fpD6Bxx3RVzk8ZbZFvBA=,tag:DXHUulHAEik0h2Uym5oA7A==,type:comment]
+    #ENC[AES256_GCM,data:v7R8DskSTUncQm8+MLMht1vJhVqCCNzykLgZdnlKJH93qrT72Y8H+a0cbsLcjxIMkd2JdB70,iv:+plyL2asupuyZkxRR680ixJVI1a1QjEC3GTT3d68PkM=,tag:YLihkptsIXacuL88uS4NIw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:vv5QufD7eoAIM+45,iv:94prv7MdMeQR7mX8fZeE/VwAZfMjg21neoEGjjA6CuE=,tag:4VfRDQ/P8DubZmrNZlPuRQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mWlbJ4GBB0nie6wqRZ+1nwM=,iv:ndt/yT60YF6ooJbyxVIayRnYkrDQQk4BCcbKH1Ouwl8=,tag:3qATd9LtJSkRvS3MgAohzg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:QF7mz7avX5n3leuDEC5pdI4S1SkUA7aj19yXmbCZYFo=,iv:K2RQ7bqOxvJedm45OD4jeLEYgc+gZOW1XXzfLT8NjK8=,tag:wIj94NCt4m9yGmjIVIIEBQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qmpCu/KSoEdks2Y1UnrZncW2szMRfrEGE7cgFDqfxfw9addPmpKWpA==,iv:Ps+4Gec6vBY61wmWwh4ke0n8/xwZ/6kzlCQznivo164=,tag:OQhtrFWKyCd+CbbNsLBQXg==,type:str]
+    #ENC[AES256_GCM,data:/DmO9lR61pb8fPOHCyv3R8mHEA+LMGpBI8u8szVTkFLsaGMgvKjMUfXnqXO7Jwq2LBnydiKnjvOmx6KpkDY4xQ==,iv:ldUY+d72PjYfwVO6XSaFiPtEpoF44LRMnT3W8J5XLpA=,tag:Zy95bfCcydc1v81vgFYNlg==,type:comment]
+    #ENC[AES256_GCM,data:7VCVi/+ir9VupcdMvso+HK0SufRU1UmW0AU3DCM8Q0HvIbPajx2/uFO8EFEDd2Ii+kwruHt0hZA=,iv:s19F9dic/UFrjBxbDs7eSVjJfT3edNfVXNfAgjdWH3o=,tag:ldGD6eGsTd/UqEUuvEQ4Pw==,type:comment]
+    #ENC[AES256_GCM,data:Yi3oi8imbB7opk+TsqiVnroSEzibTxD/PA==,iv:4Ogbuu4eCmcgwleyibnayIrVXMfE43tR3lREeLa56pk=,tag:FfGn/jzbuEyyuVcBKt9ruw==,type:comment]
+    #ENC[AES256_GCM,data:QAFIFJbAMiB0SPWmueoC9/WaKPOB/zVhragylRAub/rKROWTC1rOU41qAHAUXQA95Bb+ZfQFYplO0hHIptTr5H1FZE+DPlcZUuIqHNU=,iv:LRC584CukZDto4FsQto/xa3inXr42KlRRsjujpDfw6U=,tag:rND3dtp3POZa8h8LAOxERg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:PwNck8sXIZWBETyO+jNiqRmKGXWNH0e5vJwdBt9OX5ULx3UgS35zlEL4mrAbz2DH,iv:4wh+Ei62hz62CVtBQsXaEMJQH+reEwaeOKo0yf6zjH8=,tag:4cB+MzhaHFd5Lb7YEr+QvQ==,type:str]
+    #ENC[AES256_GCM,data:51ex7PJdWNEYZH6Ap/Fr2hP027OJTYG4yAAUjmGVl34T6pKxf/bpgeyWfvvypLYcwhe4pVvo83/rrZRcHZjtAaomdPwRQps=,iv:317RWXI8yuf610hQ1WOXbfZABADzT6ON0HXQNUWVK+0=,tag:r39OYB+DsLavy9NtfUuDYg==,type:comment]
+    #ENC[AES256_GCM,data:ng5pgHJmvrjlSVi8Fdq1ttbaywrG1FM7vqaMWqaAiTywyFRvP4FEW0/RVO6atgoJquRuopOZ,iv:qVFE2pZg4hUj+B2hWpeKGw8Np5IGQd0ThrsEbsNtiIQ=,tag:uHhLbYB2Lj9G+0U4W7M3pw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:nop3DbxkVw==,iv:BZVQy6FcQgjFZAVdxuJ/7J4RizSwtU0NYExpZWXlvS0=,tag:C2b/Gkodjc913xSkqsjwCQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:dbbXVOPW+s/pD5XVmSefyctn9dE=,iv:MK3z7pQEJNWLJryz7M8Mt/2L3dK4P/DwwA6BWql3Seg=,tag:DI6EMjMgnvKlVQFaGB2g3w==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:aG6TW8J05Y+Baok=,iv:8qLtdhBWK63/MXt7FQ2BVdxcwm+W5tjStyriZM5mrGI=,tag:9Vnkwk0+fE58SoGH4Vm24w==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:N1NbIMEwTuo0oXQy9lGM,iv:k9DU+LmLrEfHLkRNEP4S4Pej4hsyevfXqd7PXsOFyNg=,tag:hixADNV7AVVpCMWYGgITAQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:XVbkJ6nlpkDb3h1uGhF/nNS+0UsSg2SXkw==,iv:+2YgMUSTf2Rfg8nUd9jmMIPyeHvfg/W0W1ugQzeLHC0=,tag:cAbG+s1o36T7ZEW84aooKA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:UwutXVKrBy92zz1XuGDQULfasjBHvOWBhwJ6N0y3GA==,iv:/MvJb12L+AGJE0lTr4Mqai8MTNISmmCoLlgicmIMBU0=,tag:CoyZum6GLNmugr+oHO+gjw==,type:str]
+    #ENC[AES256_GCM,data:1SQSIV/NukKdsJz56ZqbD5GbBgoX3t7iV7PiD2OiqaHOs+pk3fY=,iv:vTxUUt7eAIT8kZCqBSt6m9ZuiO8+5IEMal2oE1UuUSQ=,tag:IfBHnAsJt8HPbOrQHzlokg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:2y3Vv16Tsf8xYL8ptYyipfbe0jc=,iv:ZJ3l2rcma1NaCJFPNc+50g0Lv3nK5sirQOEsvYUVM4M=,tag:dzROhQPOd3XXYaoN56/d1Q==,type:str]
+    #ENC[AES256_GCM,data:hkOxa58rZfkBHCDyKUM=,iv:Fd7S3i3uyxczYUp8xLeLH7i55LOFZ1LFMglpr3VtIYQ=,tag:Q0AVF5v9cpxO0+ff2KAe9w==,type:comment]
+    PODNET: ENC[AES256_GCM,data:DFR6UNjRsA0yh4jqPQ==,iv:wmMd9yReCEh7BKNtWC7X0euqMJZp6NY/jp4RiQO1Qao=,tag:ZKGSB2vHppBNQJMJw7aWkA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:uZc6b8Fy2ci4cp/ZZQ==,iv:QJEdeUIMUTFcpfmOSqskoNX79Vhm5wKJl9EWjFnzgDU=,tag:G9syuQM0EJ+YXrk7L0EsmQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:cN16Zg==,iv:q1EfnGgSkewUjBT3Mz0XQneAVVyCN4/G+/cHH9SUdvc=,tag:1RbD1pnOBKawDG21d+3rSw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnOXJ1SWdjK2pVUjRnaWZa
-            b3ZUUzdpMFlmVnkrdnZRaGJNVlhETHp4MndZCjIxRnVMRStmTVNLYzJHaEsyR0hp
-            ZlpMTTlxaG9ON3NQVkwva1VUZmtxejQKLS0tIEZFdGttWFZ3WFNlbmdaZWU0QkxW
-            eVhzRHR1R3dCa0RvV3R2bi9ZU3Y1WDQKo7UVP4HlsSZfMXe7btrmuanBV164piU7
-            jdUY1a8f7jQQWcfQtbCKC3boQyYk1RkhBf6MWitXkDRXEbPs58XYDA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MHREdDhEeE85NnhXdUlu
+            MXViOTdNdDFTZWlpMnZFVmlnWms3b1l3Y0djCjF0YXRwUzlqeW8rQmpJZUNJTjNU
+            VjhJUnVIM0NKZHZHQy9wWGx0c0I0MG8KLS0tIEVZbnR3c2NyWk5SSUswUVhVellx
+            bll6MDljUjNsNmMrVHNYWmcwNzU4bWMKJc8M6w18OAoUnAEKixwZ3Jul04bcOiV8
+            ORDZ/aHmLGnVQfpMys5Df0K7HO+B0hGkt76NSdrZOvtShcFPi9B7Cw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T00:22:55Z"
-    mac: ENC[AES256_GCM,data:MAgghGYr+pLNgiJpKWtkCIQPzRiiMRrcvbE34uUWgO+S0zwXh0WUXHYjBGi+WVQff5CtSZHC99QMZ352qenWU72sY/P2VI5omB+YafGOBuYCfvZw4ASJatfMOf+G67z/TOtp3J9EEmQpubdQSpsF7LTLLd6FTLKPFDn2fm50yfo=,iv:wahjZdfLfvvMBWglDkLhhiEpnQP8K4Ez6gDJxAFIPaY=,tag:8vFDsxaEUt/s6xU1w1iJlg==,type:str]
+    lastmodified: "2025-01-19T00:24:33Z"
+    mac: ENC[AES256_GCM,data:TvqneM59QQDXRM2mKffAp079WZ90DGN5ol/0vZJTSjj+23qqlsKJbRRv080kcxIu287sgYni5MqnI3fxgT5GHnqgn4dzvb2Wan/2QfbeCfLWhDC7/dzpYZywWLzDHQDd4eLuJvmqGIMQpu0GkhmkNTfqkzzrt3o8QpcuM2gTVR0=,iv:s8X0S35/vmtOrzlbIdrSKG/ixe+cfE9oRZrHN9SxjGc=,tag:rS0lFwbPNPn7bC5Xc8xxYw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
